--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
 		"babel-preset-es2015": "^6.3.13",
 		"babel-preset-react": "^6.3.13",
 		"babel-preset-stage-0": "^6.3.13",
+		"history": "^4.10.1",
 		"react": "^0.14.6",
 		"react-dom": "^0.14.6",
+		"react-router": "^5.1.2",
+		"react-router-dom": "^5.1.2",
 		"webpack": "^4.41.5",
 		"webpack-dev-server": "^3.10.2"
 	},
