--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 		"babel-preset-es2015": "^6.3.13",
 		"babel-preset-react": "^6.3.13",
 		"babel-preset-stage-0": "^6.3.13",
+		"flux": "^3.1.3",
 		"history": "^4.10.1",
-		"react": "^0.14.6",
-		"react-dom": "^0.14.6",
+		"react": "^15.0.2",
+		"react-dom": "^15.0.2",
 		"react-router": "^5.1.2",
 		"react-router-dom": "^5.1.2",
 		"webpack": "^4.41.5",
